--- a/testapp/templates/testapp/base.html
+++ b/testapp/templates/testapp/base.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
 </head>
 <body>
+    <div class="container" align="center">
+        {%block body_block%}
 
+        {%endblock%}
+    </div>
 </body>
 </html>
