Activated delete functionality.

--- a/testapp/templates/testapp/index.html
+++ b/testapp/templates/testapp/index.html
@@ -15,7 +15,7 @@
                 <td align="center">{{emp.ename}}</td>
                 <td align="center">{{emp.esal}}</td>
                 <td align="center">{{emp.eaddr}}</td>
-                <td align="center"><a href="#" >  Update  </a>  <a href="#"> Delete  </a>  </td>
+                <td align="center"><a href="#" >  Update  </a>  <a href="/delete/{{emp.id}}"> Delete  </a>  </td>
             </tr>
             {%endfor%}
         </table>
